# bazi

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  railway.json
.claude/: settings.local.json
backend/: requirements.txt
backend/app/: config.py  db.py  deps.py  main.py  models.py  quota.py  referral.py  schemas.py  security.py
backend/app/api/: admin.py  auth.py  billing.py  businesses.py  chat.py  faceread.py  fengshui.py  history.py  name.py  palmread.py  profiles.py  readings.py  referrals.py
backend/app/services/: chat.py  readings.py
backend/core/bazi/: __init__.py  calculator.py  calendar.py  compatibility.py  constants.py  elements.py  factors.py  guidance.py  kua.py  luck.py  mansions.py  nayin.py  relations.py  stars.py  strength.py  ten_gods.py
backend/core/faceread/: __init__.py  engine.py  vision.py
backend/core/fengshui/: __init__.py  house.py
backend/core/numerology/: __init__.py  chinese_name.py  constants.py  generator.py  pairs.py  scorer.py
backend/core/palmread/: __init__.py  engine.py  vision.py
backend/tests/: conftest.py  test_api_auth.py  test_api_profiles.py  test_api_readings.py  test_bazi_calculator.py  test_bazi_calendar.py  test_bazi_elements.py  test_numerology_scorer.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  auth.tsx  i18n.tsx  index.css  main.tsx
frontend/src/components/: CameraCapture.tsx  HistorySidebar.tsx  PillarCard.tsx  Shell.tsx
frontend/src/pages/: AdminPage.tsx  BusinessDetailPage.tsx  (+16 more)
