[project]
name = "metaphysical-suite-backend"
version = "0.1.0"
description = "Ba Zi and Numerology calculation engines for the Metaphysical Analysis Suite"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
